[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Menu/Online Addon/Sign in.gd" type="Script" id=2]
[ext_resource path="res://assets/Bold.tres" type="Theme" id=3]

[node name="Sign in" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -961.186
margin_top = 1.18555
margin_right = 958.814
margin_bottom = 1081.19
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 80.0
margin_right = 1920.0
margin_bottom = 160.0
theme = ExtResource( 3 )
text = "Sign In or Sign Up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 270.0
margin_right = 350.0
margin_bottom = 325.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 400.0
margin_right = 350.0
margin_bottom = 455.0
secret = true

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 400.0
margin_right = 605.0
margin_bottom = 495.0
text = "Password:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 270.0
margin_right = 605.0
margin_bottom = 365.0
text = "Username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Button" parent="."]
margin_left = 600.0
margin_top = 600.0
margin_right = 860.0
margin_bottom = 651.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Signup" type="Button" parent="."]
margin_left = 980.0
margin_top = 600.0
margin_right = 1240.0
margin_bottom = 651.0
text = "Signup"

[node name="Return" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -145.0
margin_top = 700.0
margin_right = 75.0
margin_bottom = 751.0
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -389.0
margin_top = 510.0
margin_right = 314.0
margin_bottom = 561.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1

[connection signal="button_up" from="Login" to="." method="_on_Login_button_up"]
[connection signal="button_up" from="Signup" to="." method="_on_Signup_button_up"]
[connection signal="button_up" from="Return" to="." method="_on_Return_button_up"]
